# myncer-web/src/generated_api/src/models/RunSyncRequest.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Myncer API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RunSyncRequest
+ */
+export interface RunSyncRequest {
+    /**
+     * The ID of the sync to run.
+     * @type {string}
+     * @memberof RunSyncRequest
+     */
+    syncId: string;
+}
+
+/**
+ * Check if a given object implements the RunSyncRequest interface.
+ */
+export function instanceOfRunSyncRequest(value: object): value is RunSyncRequest {
+    if (!('syncId' in value) || value['syncId'] === undefined) return false;
+    return true;
+}
+
+export function RunSyncRequestFromJSON(json: any): RunSyncRequest {
+    return RunSyncRequestFromJSONTyped(json, false);
+}
+
+export function RunSyncRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): RunSyncRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'syncId': json['syncId'],
+    };
+}
+
+export function RunSyncRequestToJSON(json: any): RunSyncRequest {
+    return RunSyncRequestToJSONTyped(json, false);
+}
+
+export function RunSyncRequestToJSONTyped(value?: RunSyncRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'syncId': value['syncId'],
+    };
+}
+
