# myncer-web/src/generated_api/src/models/RunSyncResponse.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Myncer API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RunSyncResponse
+ */
+export interface RunSyncResponse {
+    /**
+     * The ID of the sync that was run
+     * @type {string}
+     * @memberof RunSyncResponse
+     */
+    syncId: string;
+    /**
+     * The status of the sync run.
+     * @type {string}
+     * @memberof RunSyncResponse
+     */
+    status: RunSyncResponseStatusEnum;
+}
+
+
+/**
+ * @export
+ */
+export const RunSyncResponseStatusEnum = {
+    Pending: 'PENDING',
+    Running: 'RUNNING',
+    Completed: 'COMPLETED',
+    Failed: 'FAILED',
+    Cancelled: 'CANCELLED'
+} as const;
+export type RunSyncResponseStatusEnum = typeof RunSyncResponseStatusEnum[keyof typeof RunSyncResponseStatusEnum];
+
+
+/**
+ * Check if a given object implements the RunSyncResponse interface.
+ */
+export function instanceOfRunSyncResponse(value: object): value is RunSyncResponse {
+    if (!('syncId' in value) || value['syncId'] === undefined) return false;
+    if (!('status' in value) || value['status'] === undefined) return false;
+    return true;
+}
+
+export function RunSyncResponseFromJSON(json: any): RunSyncResponse {
+    return RunSyncResponseFromJSONTyped(json, false);
+}
+
+export function RunSyncResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): RunSyncResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'syncId': json['syncId'],
+        'status': json['status'],
+    };
+}
+
+export function RunSyncResponseToJSON(json: any): RunSyncResponse {
+    return RunSyncResponseToJSONTyped(json, false);
+}
+
+export function RunSyncResponseToJSONTyped(value?: RunSyncResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'syncId': value['syncId'],
+        'status': value['status'],
+    };
+}
+
