# server/api/model_run_sync_request.go
@@ -1,0 +1,159 @@
+/*
+Myncer API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the RunSyncRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &RunSyncRequest{}
+
+// RunSyncRequest struct for RunSyncRequest
+type RunSyncRequest struct {
+	// The ID of the sync to run.
+	SyncId string `json:"syncId"`
+}
+
+type _RunSyncRequest RunSyncRequest
+
+// NewRunSyncRequest instantiates a new RunSyncRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewRunSyncRequest(syncId string) *RunSyncRequest {
+	this := RunSyncRequest{}
+	this.SyncId = syncId
+	return &this
+}
+
+// NewRunSyncRequestWithDefaults instantiates a new RunSyncRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewRunSyncRequestWithDefaults() *RunSyncRequest {
+	this := RunSyncRequest{}
+	return &this
+}
+
+// GetSyncId returns the SyncId field value
+func (o *RunSyncRequest) GetSyncId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.SyncId
+}
+
+// GetSyncIdOk returns a tuple with the SyncId field value
+// and a boolean to check if the value has been set.
+func (o *RunSyncRequest) GetSyncIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SyncId, true
+}
+
+// SetSyncId sets field value
+func (o *RunSyncRequest) SetSyncId(v string) {
+	o.SyncId = v
+}
+
+func (o RunSyncRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o RunSyncRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["syncId"] = o.SyncId
+	return toSerialize, nil
+}
+
+func (o *RunSyncRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"syncId",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varRunSyncRequest := _RunSyncRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varRunSyncRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = RunSyncRequest(varRunSyncRequest)
+
+	return err
+}
+
+type NullableRunSyncRequest struct {
+	value *RunSyncRequest
+	isSet bool
+}
+
+func (v NullableRunSyncRequest) Get() *RunSyncRequest {
+	return v.value
+}
+
+func (v *NullableRunSyncRequest) Set(val *RunSyncRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableRunSyncRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableRunSyncRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableRunSyncRequest(val *RunSyncRequest) *NullableRunSyncRequest {
+	return &NullableRunSyncRequest{value: val, isSet: true}
+}
+
+func (v NullableRunSyncRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableRunSyncRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
