# server/api/model_run_sync_response.go
@@ -1,0 +1,188 @@
+/*
+Myncer API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the RunSyncResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &RunSyncResponse{}
+
+// RunSyncResponse struct for RunSyncResponse
+type RunSyncResponse struct {
+	// The ID of the sync that was run
+	SyncId string `json:"syncId"`
+	// The status of the sync run.
+	Status string `json:"status"`
+}
+
+type _RunSyncResponse RunSyncResponse
+
+// NewRunSyncResponse instantiates a new RunSyncResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewRunSyncResponse(syncId string, status string) *RunSyncResponse {
+	this := RunSyncResponse{}
+	this.SyncId = syncId
+	this.Status = status
+	return &this
+}
+
+// NewRunSyncResponseWithDefaults instantiates a new RunSyncResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewRunSyncResponseWithDefaults() *RunSyncResponse {
+	this := RunSyncResponse{}
+	return &this
+}
+
+// GetSyncId returns the SyncId field value
+func (o *RunSyncResponse) GetSyncId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.SyncId
+}
+
+// GetSyncIdOk returns a tuple with the SyncId field value
+// and a boolean to check if the value has been set.
+func (o *RunSyncResponse) GetSyncIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SyncId, true
+}
+
+// SetSyncId sets field value
+func (o *RunSyncResponse) SetSyncId(v string) {
+	o.SyncId = v
+}
+
+// GetStatus returns the Status field value
+func (o *RunSyncResponse) GetStatus() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value
+// and a boolean to check if the value has been set.
+func (o *RunSyncResponse) GetStatusOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Status, true
+}
+
+// SetStatus sets field value
+func (o *RunSyncResponse) SetStatus(v string) {
+	o.Status = v
+}
+
+func (o RunSyncResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o RunSyncResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["syncId"] = o.SyncId
+	toSerialize["status"] = o.Status
+	return toSerialize, nil
+}
+
+func (o *RunSyncResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"syncId",
+		"status",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varRunSyncResponse := _RunSyncResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varRunSyncResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = RunSyncResponse(varRunSyncResponse)
+
+	return err
+}
+
+type NullableRunSyncResponse struct {
+	value *RunSyncResponse
+	isSet bool
+}
+
+func (v NullableRunSyncResponse) Get() *RunSyncResponse {
+	return v.value
+}
+
+func (v *NullableRunSyncResponse) Set(val *RunSyncResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableRunSyncResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableRunSyncResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableRunSyncResponse(val *RunSyncResponse) *NullableRunSyncResponse {
+	return &NullableRunSyncResponse{value: val, isSet: true}
+}
+
+func (v NullableRunSyncResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableRunSyncResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
